--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<table>
     <tr>
-      <th>Name</th>
-      <th>Role</th>
+      <th>Table-Header 1</th>
+      <th>Table-Header 2</th>
       
     </tr>
     <tr>
